src/test/deca/context/valid/class/dot-identifier-complex.deca
// Programme testant un cas très particulier de dotIdentifier

class A {
    protected int x;
}

class B extends A {
    void method() {
        print(this.x);
    }
}

{
    B b = new B();
    b.method();
}