src/test/deca/context/invalid/class/dot-identifier-to-nothing.deca
// Programme testant dot identifier sur un quelque chose qui n'existe pas

class A {
    int i;
}

{
    A a = new A();
    print(a.j);
}